Fix virtual scroll issues: proper DataSource integration, range validation, and scrollbar handling

--- a/src/clients/mix-server-client/src/app/history-page/history-page.component.scss
+++ b/src/clients/mix-server-client/src/app/history-page/history-page.component.scss
@@ -2,3 +2,9 @@
   height: 100%;
   width: 100%;
 }
+
+:host {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
